1. try some new features in jdk17; 2. print result with variable name.